bindings/lisp/fae/device/audio.lisp

(in-package :cl-user)
(define-foreign-type device-audio-session-type () () (:actual-type :pointer))
(define-parse-method device-audio-session () (make-instance 'device-audio-session-type))
(defclass device-audio-session () ((device-audio-session-ptr :initarg :device-audio-session-ptr)))
(defmethod translate-to-foreign (x (type device-audio-session-type)) (slot-value x 'device-audio-session-ptr))
(defmethod translate-from-foreign (x (type device-audio-session-type)) (make-instance 'device-audio-session :device-audio-session-ptr x))
(define-foreign-type device-audio-stream-type () () (:actual-type :pointer))
(define-parse-method device-audio-stream () (make-instance 'device-audio-stream-type))
(defclass device-audio-stream () ((device-audio-stream-ptr :initarg :device-audio-stream-ptr)))
(defmethod translate-to-foreign (x (type device-audio-stream-type)) (slot-value x 'device-audio-stream-ptr))
(defmethod translate-from-foreign (x (type device-audio-stream-type)) (make-instance 'device-audio-stream :device-audio-stream-ptr x))
(defctype device-audio-session-callback (:pointer (:pointer :void)))
(defctype device-audio-stream-callback (:pointer (:pointer :void)))
(defctype device-audio-status-callback nullary)
(defcfun (device-audio-begin-session "fae_device_audio_begin_session") device-audio-session)
(defcfun (device-audio-end-session "fae_device_audio_end_session") :void (a device-audio-session))
(defcfun (device-audio-with-session "fae_device_audio_with_session") :void (a device-audio-session-callback) (b ptr) (c error-callback) (d ptr))
(defcfun (device-audio-all "fae_device_audio_all") list (a device-audio-session))
(defcfun (device-audio-default "fae_device_audio_default") pair (a device-audio-session))
(defcfun (device-audio-default-input "fae_device_audio_default_input") device-audio (a device-audio-session))
(defcfun (device-audio-default-output "fae_device_audio_default_output") device-audio (a device-audio-session))
(defcfun (device-audio-set-status-callback "fae_device_audio_set_status_callback") :void (a device-audio-status-callback) (b ptr) (c device-audio-session))
(defcfun (device-audio-name "fae_device_audio_name") string (a device-audio))
(defcfun (device-audio-host-name "fae_device_audio_host_name") string (a device-audio))
(defcfun (device-audio-has-input "fae_device_audio_has_input") :boolean (a device-audio))
(defcfun (device-audio-has-output "fae_device_audio_has_output") :boolean (a device-audio))
(defcfun (device-audio-input-type "fae_device_audio_input_type") type (a device-audio))
(defcfun (device-audio-output-type "fae_device_audio_output_type") type (a device-audio))
(defcfun (device-audio-open-stream "fae_device_audio_open_stream") device-audio-stream (a device-audio) (b processor) (c device-audio))
(defcfun (device-audio-close-stream "fae_device_audio_close_stream") :void (a device-audio-stream))
(defcfun (device-audio-with-stream "fae_device_audio_with_stream") :void (a device-audio) (b processor) (c device-audio) (d device-audio-stream-callback) (e ptr) (f error-callback) (g ptr))